--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-top-loading-bar": "^2.1.0",
     "timidity": "^1.3.0",
     "web-vitals": "^1.1.2"
   },
