--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.2.3",
+    "@speechly/speech-recognition-polyfill": "^1.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -21,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-speech-recognition": "^3.9.0",
     "react-top-loading-bar": "^2.1.0",
     "timidity": "^1.3.0",
     "web-vitals": "^1.1.2"
